--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image_picker: ^0.6.2+1
   share: ^0.6.3+5
   division: ^0.8.7+2
+  percent_indicator:
   flutter:
     sdk: flutter
   flutter_localizations:
