--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   share: ^0.6.3+5
   division: ^0.8.7+2
   percent_indicator:
+  camera:
+  path_provider:
+  path:
+  file_picker:
   flutter:
     sdk: flutter
   flutter_localizations:
