--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,8 @@ dependencies:
   connectivity: ^0.4.5+3
   shared_preferences: ^0.5.3+4
   json_annotation: ^2.0.0
-  google_maps_flutter: ^0.5.11
+  google_maps_flutter:
+  geolocator:
   location: ^2.3.5
   intl: ^0.16.0
   flutter_staggered_grid_view: ^0.3.0
