--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,32 +18,31 @@ environment:
 
 dependencies:
   flutter_html: ^0.11.0
-  http: ^0.12.0+2
+  http:
   flutter_masked_text: ^0.8.0
-  dio: ^3.0.5
+  dio:
   shimmer: ^1.0.1
-  connectivity: ^0.4.5+3
-  shared_preferences: ^0.5.3+4
+  shared_preferences:
   json_annotation: ^2.0.0
+  firebase_messaging:
   google_maps_flutter:
   geolocator:
   location: ^2.3.5
   intl: ^0.16.0
-  flutter_staggered_grid_view: ^0.3.0
   cached_network_image: ^2.0.0-rc
-  get_it: ^3.0.1
-  mobx: ^0.3.8+1
+  get_it:
+  mobx:
   charts_flutter: ^0.8.1
-  flutter_mobx: ^0.3.3
+  flutter_mobx:
   url_launcher: ^5.2.7
-  image_picker: ^0.6.2+1
-  share: ^0.6.3+5
+  image_picker:
   division: ^0.8.7+2
   percent_indicator:
   camera:
   path_provider:
   path:
   file_picker:
+  flutter_local_notifications:
   flutter:
     sdk: flutter
   flutter_localizations:
@@ -55,8 +54,8 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^1.0.0
-  json_serializable: ^2.0.0
-  mobx_codegen: ^0.3.9
+  json_serializable:
+  mobx_codegen:
   flutter_launcher_icons: "^0.7.3"
   flutter_test:
     sdk: flutter
